--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -31,3 +31,22 @@
   margin-top: 8px !important;
 }
 
+.post-open-content-body p {
+  margin-top: 10px !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5 !important;
+  color: #212529;
+  text-align: left;
+}
+
+.post-open-content-body p:first-child {
+  margin-top: 0 !important;
+}
+
+.related-posts {
+  width: 100% !important;
+  margin-top: 0 !important;
+}
+
