--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -285,8 +285,77 @@
 
 .mod-close {
   position: absolute;
-  right: 0;
-  top: 0;
+  right: -10;
+  top: -10;
   padding: 5px;
+}
+
+.readmore {
+  position: relative;
+  max-height: 100px;
+  min-height: 60px;
+  width: 100%;
+  overflow: hidden;
+  padding: 10px;
+  margin-bottom: 20px;
+  transition: max-height 0.15s ease-out;
+}
+
+.readmore.expand {
+  max-height: 5000px !important;
+  transition: max-height 0.35s ease-in-out;
+}
+
+.readmore-link {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  color: blue;
+  font-weight: bold;
+  font-size: 16px;
+  background-image: linear-gradient(to bottom, transparent, grey);
+  cursor: pointer;
+}
+
+.readmore-link.expand {
+  position: relative;
+  background-image: none;
+  padding-top: 10px;
+  height: 20px;
+}
+
+.readmore-link:after {
+  content: "Read more";
+}
+
+.readmore-link.expand:after {
+  content: "Read less";
+}
+
+.post-quote {
+  background: #F4F4F4;
+  border-left: 5px solid blue;
+  margin-bottom: 20px;
+}
+
+.post-quote-content {
+  padding-left: 20px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.post-quote-reply-to {
+  padding: 10px;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.more-link {
+  position: absolute;
+  bottom: 50%;
 }
 
